@@ -280,10 +280,6 @@ mysignal(int sig, mysig_t act)
 		memset(&sa, 0, sizeof(sa));
 		sigemptyset(&sa.sa_mask);
 		sa.sa_flags = 0;
-#if defined(SA_RESTART)
-		if (sig == SIGCHLD)
-			sa.sa_flags |= SA_RESTART;
-#endif
 #if defined(SA_INTERRUPT)
 		if (sig == SIGALRM)
 			sa.sa_flags |= SA_INTERRUPT;
