@@ -1,3 +1,7 @@
+20010615
+ - (stevesk) don't set SA_RESTART and set SIGCHLD to SIG_DFL
+   around grantpt().
+
 20010614
  - OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2001/06/13 09:10:31
@@ -5644,4 +5648,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1286 2001/06/13 19:23:32 mouring Exp $
+$Id: ChangeLog,v 1.1287 2001/06/15 00:04:23 stevesk Exp $
